finishing up mobile styles - fixes alignment, nav bar issues, and image distortion issues

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -6,9 +6,10 @@ html
         max-width: 500px
 
 body
+    margin: 8px
+
     @media only screen and (max-width: 500px)
         max-width: 500px
-        border: 2px solid red
 
     .home-header 
         display: flex
@@ -25,8 +26,10 @@ body
                 font-family: "Space Mono", monospace
                 text-decoration: none
                 color: #b5b9c0
+
                 span
                     color: #24e7fc
+
                 .resume
                     border: 1px solid #24e7fc
                     border-radius: 9px
@@ -42,13 +45,13 @@ body
     .menu-wrap
         position: fixed
         top: 0
-        right: 0
+        right: 103px
         z-index: 1
 
         .toggler
             position: absolute
             top: 0
-            right: 0
+            right: 25px
             z-index: 2
             cursor: pointer
             width: 50px
@@ -58,7 +61,7 @@ body
         .hamburger
             position: absolute
             top: 0
-            right: 0
+            right: -86px
             z-index: 1
             width: 60px
             height: 60px
@@ -111,8 +114,8 @@ body
         .menu
             position: fixed
             top: 0
-            right: 0
-            width: 100%
+            right: 70px
+            width: 90%
             height: 100%
             visibility: hidden
             overflow: hidden
@@ -165,17 +168,12 @@ body
         margin-top: 3rem
 
         @media only screen and (max-width: 500px)
-            max-width: 500px
+            max-width: 780px
+            margin-left: 5em
 
         .about-container
             @media only screen and (max-width: 500px)
-                max-width: 395px
-                margin: 0em 11em 0em 4em
-                border: 3px solid white
-
-        @media only screen and (max-width: 500px)
-            max-width: 500px
-            border: 3px solid green
+                max-width: 40em
         
         h4
             font-family: "Space Mono", monospace
@@ -217,15 +215,21 @@ body
 
             @media only screen and (max-width: 500px)
                 font-size: 1.2em
-                width: 24rem
+                width: 40rem
         
     .skills-container
         margin-top: 1rem
+
+        @media only screen and (max-width: 500px)
+            width: 40rem
 
         h1
             margin-bottom: 0
             font-size: 2.5em
             margin-top: 1.5em
+
+            @media only screen and (max-width: 500px)
+                width: 25rem
         
         ul
             font-size: 3em
@@ -307,6 +311,10 @@ body
         flex-direction: column
         font-family: "Work Sans", sans-serif
 
+        @media only screen and (max-width: 500px)
+            width: 40rem
+
+
         h1
             padding-bottom: .2em
             font-size: 2.5em
@@ -350,6 +358,11 @@ body
                 height: 45vw
                 border-radius: 17px
 
+                @media only screen and (max-width: 500px)
+                    width: 50vw
+                    height: 40vw
+
+
         .gp-img
             flex-wrap: wrap
 
@@ -374,6 +387,10 @@ body
                     line-height: 1.8rem
                     font-family: 'Roboto', sans-serif
 
+                    @media only screen and (max-width: 500px)
+                        width: 40rem
+
+
             .github
                 font-family: 'Roboto', sans-serif
                 opacity: .8
@@ -396,6 +413,9 @@ body
         justify-content: space-between
         flex-direction: column
         font-family: "Work Sans", sans-serif
+
+        @media only screen and (max-width: 500px)
+            width: 40rem
 
         h1
             margin-top: 3em
